# cpuminer-rr

./: CMakeLists.txt  README.md  config.cmake  cpuminer_lib.cpp  main.cpp
include/: cpuminer_lib.h  miner_actors.h  rrhash.h  stratum_actor.h  stratum_json.h  user_params.h  util.h
src/: miner_actors.cpp  rrhash.cpp  stratum_actor.cpp  stratum_json.cpp  user_params.cpp  util.cpp
